# artefact

./: .gitignore  .gitlab-ci.yml  README.md  ccache.bash  gitlab-ci.bash  gitlab-ros.bash  install_ARTEFACT.sh
V-REP_models/: drone.ttm
V-REP_scenes/: Corridors.ttt
ardrone_joystick/: CMakeLists.txt  package.xml
ardrone_joystick/src/: main.cpp
artefact/: CMakeLists.txt  package.xml
image_processing/: CMakeLists.txt  package.xml
image_processing/scripts/: cube_overlay.py  image_reformat.py  image_reformat_backup.py  image_reformat_bebop.py  static_transforms.py  static_transforms_bebop.py  transform.py
sim_launcher/: CMakeLists.txt  package.xml
sim_launcher/launch/: bebop.launch  sim.launch
tum_simulator/cvg_sim_gazebo/launch/: ardrone_testworld.launch
